<resources>
    <string name="new_version_uploadbtn">立即更新</string>
    <string name="new_version_cancelbtn">下次更新</string>
    <string name="new_version_title">更新提醒</string>
    <string name="saving">保存图片…</string>
    <string name="wait">请稍后…</string>
    <string name="error_pick_image">图片无效</string>
    <string name="done">保存</string>
    <string name="cancel">取消</string>
    <string name="wallpaper">正在设置壁纸，请稍候…</string>
    <string name="multiface_crop_help">轻点一张脸开始裁剪。</string>
    <string name="network_not_connected">网络连接失败，请检查网络设置</string>
    <string name="http_status_code_error">网络异常</string>
    <string name="http_exception_error">网络异常，请求超时</string>
    <string name="io_exception_error">文件流异常</string>
    <string name="socket_exception_error">网络异常，读取数据超时</string>
    <string name="app_run_code_error">应用程序运行时异常</string>
    <string name="app_download_error">下载失败</string>
    <string name="app_download_complete">下载完成，点击安装。</string>
    <string name="app_download_start">开始下载</string>
    <string name="app_find_new">发现新版本</string>
    <string name="app_current_is_new">当前版本已是最新版本，版本号是：%s</string>
    <string name="app_show_message" formatted="false">当前有新版本，版本号是：%1$s，已安装版本是：%2$s</string>
    <string name="app_find_new_title">发现新版本: %s</string>
    <string name="app_message">修复bug</string>
    <string name="app_ok">立即更新</string>
    <string name="app_cancel">以后再说</string>
    <string name="app_quit">退出</string>
    <string name="activity_remote_service_binding">AppDemo4</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">partner</string>
    <string name="sellerHint">seller</string>
    <string name="out_trade_noHint">out_trade_no</string>
    <string name="subjectHint">subject</string>
    <string name="bodyHint">body</string>
    <string name="total_feeHint">total_fee</string>
    <string name="notify_urlHint">notify_url</string>
    <string name="charsetHint">charset</string>
    <string name="signTypeHint">signType</string>
    <string name="confirm_install_hint">安装提示</string>
    <string name="confirm_install">"为保证您的交易安全，需要您安装支付宝安全支付服务，才能进行付款。

点击确定，立即安装。"</string>
    <string name="Ensure">确定</string>
    <string name="Cancel">取消</string>
    <string name="check_sign_failed">您的订单信息已被非法篡改。</string>
    <string name="list_end_load_text">正在加载数据…</string>
    <string name="dialog_loading_text">加载中…</string>
    <string name="no_data">暂无数据</string>
    <string name="start_time">开始时间：</string>
    <string name="stop_time">停止时间：</string>
    <string name="add">添加</string>
    <string name="sdcard_error">无法载入sdcard</string>
    <string name="photo_take">拍照</string>
    <string name="photo_loc">本地</string>
    <string name="photo_cancle">取消</string>
    <string name="exit_out_success">退出成功</string>
    <string name="btn_update_my_info">编辑个人资料</string>
    <string name="bmi_height">身高:</string>
    <string name="bmi_height_unit">单位:厘米</string>
    <string name="bmi_weight">体重:</string>
    <string name="bmi_weight_unit">单位:千克</string>
    <string name="bmi_compute">点击测试BMI</string>
    <string name="bmi_weight_not_null">无效的体重</string>
    <string name="bmi_height_not_null">无效的身高</string>
    <string name="smoke_year">抽烟时间:</string>
    <string name="smoke_unit">单位:年</string>
    <string name="each_count">每天数量:</string>
    <string name="each_unit">单位:支</string>
    <string name="smoke_test">点击测试危害</string>
    <string name="sympotom_notice">若症状程度较重、反复或持续不缓解、甚至加剧，请及时就医！</string>
    <string name="yigantrue">(+)</string>
    <string name="yiganfalse">(–)</string>
    <string name="year">年:</string>
    <string name="month">月:</string>
    <string name="day">日:</string>
    <string name="name1">乙肝表面抗原(HBsAg)</string>
    <string name="name2">乙肝表面抗体(HBsAb)</string>
    <string name="name3">乙肝E抗原(HBeAg)</string>
    <string name="name4">乙肝E抗体(HBeAb)</string>
    <string name="name5">乙肝核心抗体(HBcAb)</string>
    <string name="btn_user_hit">帐号必须以字母开头</string>
    <string name="hello">请输入关键字</string>
    <string name="hint_question">请输入您的性别、年龄，并详细描述您的病情以便与我们进一步确诊！</string>
    <string name="app_name">智慧医疗</string>
    <string name="dlg_info">提示</string>
    <string name="dlg_error">提示</string>
    <string name="dlg_settings">设置</string>
    <string name="dlg_delete_info">是否删除该条记录？</string>
    <string name="dlg_delete_alarm">是否删除该闹铃？</string>
    <string name="dlg_redo">重试</string>
    <string name="dlg_back">返回</string>
    <string name="dlg_network_error">出现网络错误，请检查网络连接设置是否正确。</string>
    <string name="bt_fp_title1">院内导航</string>
    <string name="bt_fp_title2">智能导诊</string>
    <string name="bt_fp_title3">挂号</string>
    <string name="bt_fp_title31">确认</string>
    <string name="bt_fp_title4">住院</string>
    <string name="bt_fp_title5">体检</string>
    <string name="bt_fp_title6">检查预约</string>
    <string name="bt_fp_title7">健康百科</string>
    <string name="bt_fp_title8">健康资讯</string>
    <string name="bt_fp_title9">医生在线</string>
    <string name="bt_fp_title10">你有新的预约信息</string>
    <string name="bt_fp_title11">我的档案</string>
    <string name="settings_age">年龄</string>
    <string name="settings_sex">性别</string>
    <string name="sex_male">男</string>
    <string name="sex_female">女</string>
    <string name="list_symptom_checker">症状自检</string>
    <string name="btn_body">身体</string>
    <string name="btn_list">列表</string>
    <string name="shengming">该测试结果仅供参考，可能产生误诊、漏诊，不能替代医生和其他医务人员建议。</string>
    <string name="error_age_out_of_bound">请输入0~110之间的整数</string>
    <string name="title_symptom_list">已选择的症状</string>
    <string name="title_symptom_question">问题</string>
    <string name="btn_answers">回答</string>
    <string name="btn_continue">继续</string>
    <string name="btn_next_question">下一个问题</string>
    <string name="btn_check_possible_diseas">查看可能的疾病</string>
    <string name="btn_delete">删除</string>
    <string name="layout_temp99">手机号码:</string>
    <string name="layout_temp100">手机号码</string>
    <string name="layout_temp103">身份证号:</string>
    <string name="layout_temp104">身份证号</string>
    <string name="layout_temp114">个人信息</string>
    <string name="layout_temp115">用户姓名:</string>
    <string name="layout_temp116">用户姓名</string>
    <string name="layout_temp117">用户性别:</string>
    <string name="layout_temp118">确认预约</string>
    <string name="layout_temp287">一、本服务协议双方为浙大一院（以下简称“本院”）与掌上浙一大众版用户（以下简称“用户”），本服务协议具有合同效力。</string>
    <string name="layout_temp288">掌上浙一大众版（以下简称“本软件”）为浙大一院名下产品。</string>
    <string name="layout_temp289">本服务协议内容包括协议正文及所有本院已经发布的或将来可能发布的各类规则。所有规则为协议不可分割的一部分，与协议正文具有同等法律效力。</string>
    <string name="layout_temp290">用户在使用本软件提供的各项服务的同时，承诺接受并遵守各项相关规则的规定。本软件有权根据需要不定时地制定、修改本协议或各类规则，如本协议有任何变更，登录或继续使用服务将表示用户接受经修订的协议。如用户不同意相关变更，必须停止使用“服务”。经修订的协议一经在本软件公布后，立即自动生效。各类规则在发布后立即自动生效，亦成为本协议的一部分。登录或继续使用“服务”将表示用户接受经修订的协议。除另行明确声明外，任何使“服务”范围扩大或功能增强的新内容均受本协议约束。</string>
    <string name="layout_temp291">二、定义</string>
    <string name="layout_temp292">用户：使用掌上浙一网上收费服务的用户必须是具备完全民事行为能力的自然人。无民事行为能力人、限制民事行为能力人的个人不当注册，并使用了本软件的各项服务，其与本软件之间的服务协议自始无效，本软件一经发现，有权立即注销该用户，并追究其使用本软件“服务”的一切法律责任。</string>
    <string name="layout_temp293">用户注册：是指用户登录本软件，并按要求填写相关信息并确认同意履行相关用户协议的过程。用户因获取有偿服务的费用由用户负责支付，本软件仅作为服务提供的平台。本软件不保证注册医生用户提供的医疗建议的质量、安全或合法性，本软件并不作为服务提供者或服务获取者的身份参与服务行为的本身，因此提醒用户应该通过自己的谨慎判断确定医疗建议是否适合自己。</string>
    <string name="layout_temp294">医疗信息服务：本软件的服务仅限于有多年医疗工作（临床经验）的注册医生所提供的医疗信息服务，不涉及与任何建议相关的诊断及治疗，诊断与治疗不能在本软件上进行，所有信息仅为注册医生提供的医疗相关信息类服务，不代表任何诊断、治疗方案，用户不能将其理解为治疗方案、处方等。</string>
    <string name="layout_temp295">掌上浙一大众版用户支付帐户：注册用户均有唯一的掌上浙一支付帐户，用户可通过多种方式充值掌上浙一支付帐户，账户资金用于该用户在本软件所有收费服务。</string>
    <string name="layout_temp296">三、使用专家在线服务用户的权利及义务</string>
    <string name="layout_temp297">本条款所指“专家在线”特指用户通过本软件提交的咨询信息和通过预约特定医生的电话咨询，咨询的交互主体为本软件的用户和浙大一院的医生。</string>
    <string name="layout_temp298">1、用户必须在注册及申请服务时，详细阅读本软件使用说明信息，并严格按要求操作。在个人信息部分必须提供真实的用户信息。一旦发现用户提供的个人信息中有虚假，本软件有权立即终止向用户提供的所有服务，并冻结用户的帐户，有权要求用户赔偿因提供虚假信息给医生及本软件造成的损失。</string>
    <string name="layout_temp299">2、用户使用本软件提供的电话咨询服务，在支付咨询费用后，须经医生确认后方为预约成功。</string>
    <string name="layout_temp300">3、咨询及通知消息通过本软件平台推送。因网络通道故障导致的发送不成功和延迟发送，本软件不负责任。</string>
    <string name="layout_temp301">4、咨询均只限于根据用户的主观描述，医生尽可能利用医学知识及临床经验给予一定的解惑及如何就医方面的建议，不对结果是否符合用户预期作保证。</string>
    <string name="layout_temp302">5、咨询中医生所提供内容均是个人建议，不得作为诊断、治疗的直接医疗处置，用户需知晓并同意诊断及治疗均需前往医院。擅自将医生建议作为处方使用的，后果自负，与医生及本软件无关。</string>
    <string name="layout_temp303">6、本软件服务不能代替到医院就诊，医生的回复也可能有延迟，尤其是患者病情严重或者发生急性症状和化验结果严重异常的情况下，都需要尽快就医，若因等待医生回复导致病情延误，本软件不负责任。</string>
    <string name="layout_temp304">7、用户在咨询过程中应用语文明、尊重医生、平等交流。如有对医生恶意中伤，语言不文明，医生有权立即中断服务，用户无权要求退款。</string>
    <string name="layout_temp305">8、电话咨询过程中遇到医生有紧急事情处理时（医生职业要求），用户应给予理解，暂停咨询，并向本软件客服申报，以便安排重新咨询的具体时间。</string>
    <string name="layout_temp306">9、当用户顺利使用完收费咨询服务后不得因为咨询服务中的内容不满意要求退款。</string>
    <string name="layout_temp307">10、用户在本软件上使用服务的过程中如遇纠纷，可以在对应提问咨询或电话咨询结束后的72小时内，向本软件客服请求协调。如用户因收费服务与其他用户产生诉讼的，用户有权通过司法部门要求本软件提供相关资料。</string>
    <string name="layout_temp308">11、用户提交的病情信息，如果本软件认为其内容包含任何不基于事实、虚构、编造及无亲身经历的言论，带有威胁、淫秽、漫骂、非法及带有人身攻击之言论，或含有色情、暴力、恐怖内容，或含有违背伦理道德内容，或涉及违法犯罪的内容，以及其他本软件认为不恰当的情况，本软件有权在未经用户同意的情况下进行编辑、删除以及取消该账户资格，并保留进行法律追究的权利。</string>
    <string name="layout_temp309">12、用户请慎重并避免发出带有个人电话、QQ、MSN、电子邮箱等联系方式的内容，由此出现被扰或其他伤害行为责任自负。</string>
    <string name="layout_temp310">四、掌上浙一大众版的权利和义务</string>
    <string name="layout_temp311">1、本软件尽力提供相对安全、稳定的服务平台，以保证服务的顺利进行。电话咨询过程中，由于本软件平台性能不稳定等系统原因导致服务不能完成的，将由本软件客服为您重新安排咨询服务。</string>
    <string name="layout_temp312">2、本软件保证提供咨询服务的医生是浙大一院专家。</string>
    <string name="layout_temp313">3、对用户在使用收费服务过程中遇到的与服务相关的任何问题给予回复及解答。</string>
    <string name="layout_temp314">4、对于用户在本软件预定服务中的不当行为或其它任何本软件认为应当终止服务的情况，本软件有权随时做出删除相关信息、终止服务提供等处理，且无须征得用户的同意。</string>
    <string name="layout_temp315">5、因网络服务平台的特殊性，本软件没有义务对所有用户的注册数据、所有的申请行为以及与电话咨询有关的其它事项进行事先审查，但如存在下列情况：</string>
    <string name="layout_temp316">（1） 用户或其它第三方通知本软件，认为某个具体用户或具体交易事项可能存在重大问题；</string>
    <string name="layout_temp317">（2）用户或其它第三方向本软件告知咨询内容有违法或不当行为的，本软件以普通非专业的知识水平标准对相关内容进行判别，可以明显认为这些内容或行为具有违法或不当性质的；本软件有权根据不同情况选择保留或删除相关信息或继续、停止对该用户提供服务，并追究相关法律责任。</string>
    <string name="layout_temp318">6、咨询双方因服务引起的纠纷，请本软件给予调解的，本软件将有权了解相关信息，并将双方提供的信息与对方沟通。因本软件上发生服务纠纷，引起诉讼的，用户通过司法部门或行政部门依照法定程序要求本软件提供相关数据，本软件应积极配合并提供有关资料。</string>
    <string name="layout_temp319">7、用户要求查询帐户资金使用情况时，本软件有义务在三个工作日内通过电子邮件的方式提供详细的对帐信息。</string>
    <string name="layout_temp320">五、隐私权保护</string>
    <string name="layout_temp321">一旦您同意本协议或使用本服务，将默认您同意“掌上浙一大众版隐私保护”相关条例，在注册为本软件用户时，需要填写真实电话号码，以便在丢失密码后，迅速找回。如果您的账户存在异常时，请立即与本软件取得联系，在本软件采取行动前，本软件不承担任何责任。</string>
    <string name="layout_temp322">六、不可抗力</string>
    <string name="layout_temp323">系统因下列状况无法正常运作，使用户无法使用电话咨询服务时，本软件不承担损害赔偿责任，该状况包括但不限于：</string>
    <string name="layout_temp324">1、本软件公告的系统停机维护期间；</string>
    <string name="layout_temp325">2、电信设备出现故障不能进行数据传输的；</string>
    <string name="layout_temp326">3、因台风、地震、海啸、洪水、停电、战争、恐怖袭击等不可抗力之因素，造成系统障碍不能执行业务的；</string>
    <string name="layout_temp327">4、由于黑客攻击、电信部门技术调整或故障、网站升级、银行方面的问题等原因而造成的服务中断或者延迟。</string>
    <string name="layout_temp328">七、完整协议</string>
    <string name="layout_temp329">本协议由本协议条款与《掌上浙一大众版法律声明》等本软件公示的各项规则组成，相关名词可互相引用参照，如有不同理解，以本协议条款为准。</string>
    <string name="layout_temp330">你对本协议理解和认同，您即对本协议所有组成部分的内容理解并认同，一旦您使用专家在线服务，你和本院即受本协议所有组成部分的约束。。</string>
    <string name="layout_temp331">本协议部分内容被有管辖权的法院认定为违法的，不因此影响其他内容的效力。</string>
    <string name="layout_temp332">八、法律适用与管辖</string>
    <string name="layout_temp333">本协议之效力、解释、变更、执行与争议解决均适用中华人民共和国法律，没有相关法律规定的，参照通用国际商业惯例和（或）行业惯例。</string>
    <string name="layout_temp334">因本协议产生之争议，均应依照中华人民共和国法律予以处理。</string>
    <string name="layout_temp335">本院对以上内容拥有最终解释权。</string>
    <string name="layout_temp336">用户确认本服务协议后，本服务协议即在用户和本院之间产生法律效力。请用户务必在注册、使用本软件之前认真阅读全部服务协议内容，如有任何疑问，请咨询本院客服。</string>
    <string name="layout_temp370">支付类型</string>
    <string name="layout_temp371">U米数额</string>
    <string name="layout_temp372">消费时间</string>
    <string name="layout_temp373">充值</string>
</resources>