<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/symptom_question_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title" />
    <ScrollView android:id="@id/detail" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.1">
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp287" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp288" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp289" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp290" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp336" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp291" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp292" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp293" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp294" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp295" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp296" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp297" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp298" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp299" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp300" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp301" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp302" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp303" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp304" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp305" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp306" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp307" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp308" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp309" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp310" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp311" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp312" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp313" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp314" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp315" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp316" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp317" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp318" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp319" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp320" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp321" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp322" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp323" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp324" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp325" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp326" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp327" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp328" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp329" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp330" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp331" />
            <TextView android:textSize="20.0sp" android:textColor="#ff000000" android:id="@id/title1" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp332" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp333" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp334" />
            <TextView android:textSize="16.0sp" android:textColor="#ff000000" android:id="@id/content" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/layout_temp335" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
