<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/symptom_question_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/hospital_map_title" />
    <include android:id="@id/step_layout3" android:visibility="gone" layout="@layout/common_step_bottom3" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="0.1">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:background="@drawable/bg_register_top_info" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:layout_marginBottom="7.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="#ffb32b2b" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/layout_temp114" android:singleLine="true" android:layout_weight="0.1" />
                    <ImageView android:id="@id/edit_user_info" android:visibility="gone" android:background="@drawable/btn_edit_info_selector" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="5.0dip" />
                </LinearLayout>
                <View android:background="@xml/repeat_register_line" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" />
                <LinearLayout android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layout_temp115" />
                    <EditText android:textSize="17.0sp" android:textColor="#ff6d6d6d" android:id="@id/name" android:background="@drawable/info_all_bg" android:paddingLeft="5.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:hint="@string/layout_temp116" android:layout_weight="0.1" />
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layout_temp99" />
                    <EditText android:textSize="17.0sp" android:textColor="#ff6d6d6d" android:id="@id/phone" android:background="@drawable/info_all_bg" android:paddingLeft="5.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:hint="@string/layout_temp100" android:layout_weight="0.1" android:inputType="phone" />
                </LinearLayout>
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layout_temp117" />
                    <RadioGroup android:orientation="horizontal" android:id="@id/check_btn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="13.0dip" android:layout_weight="0.1">
                        <RadioButton android:id="@id/male" android:layout_width="wrap_content" android:layout_height="wrap_content"  android:text="@string/sex_male" />
                        <RadioButton android:id="@id/female" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/sex_female" />
                    </RadioGroup>
                </LinearLayout>
                <LinearLayout android:orientation="horizontal" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="10.0dip">
                    <TextView android:textSize="17.0sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/layout_temp103" />
                    <EditText android:textSize="17.0sp" android:textColor="#ff6d6d6d" android:id="@id/idcard" android:background="@drawable/info_all_bg" android:paddingLeft="5.0dip" android:paddingRight="3.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:hint="@string/layout_temp104" android:digits="0123456789Xx" android:layout_weight="0.1" android:inputType="textCapCharacters|numberSigned|phone" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
                <TextView android:background="@drawable/bg_registe_buttom_left" android:layout_width="wrap_content" android:layout_height="10.0dip" />
                <TextView android:background="@xml/repeat_register_buttom_line" android:layout_width="0.0dip" android:layout_height="10.0dip" android:layout_weight="1.0" />
                <TextView android:background="@drawable/bg_registe_buttom_right" android:layout_width="wrap_content" android:layout_height="10.0dip" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip">
        <Button android:textSize="19.0sp" android:textColor="@color/white" android:id="@id/submit" android:background="@drawable/btn_expert" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="15.0dip" android:text="@string/layout_temp118" />
    </LinearLayout>
</LinearLayout>
