<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/symptom_question_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/common_title" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/recharge_page_bg" android:layout_width="fill_parent" android:layout_height="30.0dip">
        <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:gravity="center" android:layout_width="100.0dip" android:layout_height="fill_parent" android:text="@string/layout_temp370" />
        <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:gravity="center" android:layout_width="80.0dip" android:layout_height="fill_parent" android:text="@string/layout_temp371" />
        <TextView android:textSize="14.0sp" android:textColor="#ff5d5d5d" android:gravity="center" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/layout_temp372" android:layout_weight="0.1" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="0.1">
        <ListView android:id="@id/list_view" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageView android:id="@id/empty_list_view" android:background="@drawable/point_default_page" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    </LinearLayout>
    <Button android:textSize="20.0sp" android:textColor="@color/white" android:id="@id/charge" android:background="@drawable/btn_nomorl" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="13.0dip" android:text="@string/layout_temp373" />
</LinearLayout>
